Add comment for locked interior section in HTML

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <!-- Content -->
     <!-- SCREENS -->
+<!-- SCREENS -->
 <main class="content">
   <!-- HOME -->
   <section class="screen is-active" id="screen-home">
@@ -185,6 +186,7 @@
     </div>
   </section>
 </main>
+
 
 
           <!-- Interior (locked) -->
