Fix HTML structure by updating topbar layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="title" id="username">MarkeyG</div>
       </div>
 
-      <div class="topbar__center">
+      <div class="topbar__right">
         <div class="topbar__center">
   <div class="brand">
     <div class="brand__logo" aria-label="MR Detailing Academy logo">
