Integrate Telegram WebApp and manage state
Added JavaScript functionality for Telegram WebApp integration and state management.

--- a/index.html
+++ b/index.html
@@ -1,346 +1,99 @@
-<!doctype html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <meta name="theme-color" content="#0B0D12" />
-  <title>MR Detailing Academy</title>
-  <link rel="stylesheet" href="./styles.css" />
-</head>
+const tg = window.Telegram?.WebApp;
+const $ = (q) => document.querySelector(q);
+const $$ = (q) => Array.from(document.querySelectorAll(q));
 
-<body>
-  <div class="bg">
-    <div class="bg__blob bg__blob--1"></div>
-    <div class="bg__blob bg__blob--2"></div>
-    <div class="bg__blob bg__blob--3"></div>
-    <div class="bg__grain"></div>
-  </div>
+function safeSet(id, value) {
+  const el = document.getElementById(id);
+  if (el) el.textContent = value;
+}
 
-  <div class="app" id="app">
-    <!-- Top Bar -->
-    <header class="topbar">
-      <button class="icon-btn" id="closeBtn" aria-label="Close">×</button>
+const state = {
+  tab: "home",
+  user: { id: "local", name: "User" },
+  progress: JSON.parse(localStorage.getItem("mr_progress") || "{}"),
+};
 
-      <div class="topbar__center">
-        <div class="muted" id="greeting">Доброе утро,</div>
-        <div class="title" id="username">MarkeyG</div>
-      </div>
+function saveProgress() {
+  localStorage.setItem("mr_progress", JSON.stringify(state.progress));
+}
+function setProgress(key, value) {
+  state.progress[key] = value;
+  saveProgress();
+}
 
-      <div class="topbar__right">
-        <div class="topbar__center">
-  <div class="brand">
-    <div class="brand__logo" aria-label="MR Detailing Academy logo">
-      <!-- SVG Logo: MR + Droplet -->
-      <svg viewBox="0 0 64 64" class="logo">
-        <defs>
-          <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-            <stop offset="0" stop-color="#8f6bff"/>
-            <stop offset="1" stop-color="#6c4dff"/>
-          </linearGradient>
-          <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
-            <feGaussianBlur stdDeviation="3.2" result="b"/>
-            <feMerge>
-              <feMergeNode in="b"/>
-              <feMergeNode in="SourceGraphic"/>
-            </feMerge>
-          </filter>
-        </defs>
-
-        <!-- glass plate -->
-        <rect x="6" y="6" width="52" height="52" rx="18" fill="rgba(255,255,255,.06)" stroke="rgba(255,255,255,.14)"/>
-        <!-- droplet -->
-        <path filter="url(#glow)" d="M44 20c0 9-8 14-8 20a8 8 0 0 0 16 0c0-6-8-11-8-20z" fill="url(#g)" opacity=".95"/>
-        <!-- MR monogram -->
-        <path d="M14 41V25c0-2 1.2-3 3-3h1.5c1.2 0 2.2.5 2.8 1.5l3.2 5 3.2-5c.6-1 1.6-1.5 2.8-1.5H36c1.8 0 3 1 3 3v16"
-              fill="none" stroke="rgba(255,255,255,.92)" stroke-width="3.2" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M39 33h5.5c2.6 0 4.5-1.7 4.5-4.2S47.1 24.6 44.5 24.6H39V41"
-              fill="none" stroke="rgba(255,255,255,.92)" stroke-width="3.2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </div>
-
-    <div class="brand__text">
-      <div class="muted" id="greeting">Доброе утро,</div>
-      <div class="title" id="username">MarkeyG</div>
-      <div class="brand__sub muted">MR Detailing Academy</div>
-    </div>
-  </div>
-</div>
-
-        <div class="muted">Баланс</div>
-        <div class="balance"><span id="stars">100</span> ⭐</div>
-      </div>
-    </header>
-
-    <!-- Content -->
-    <!-- SCREENS -->
-<!-- SCREENS -->
-<main class="content">
-  <!-- HOME -->
-  <section class="screen is-active" id="screen-home">
-    <!-- Quick row -->
-    <section class="section">
-      <div class="section__head">
-        <h2>Разделы</h2>
-        <span class="muted">scroll →</span>
-      </div>
-
-      <div class="hscroll">
-        <button class="mini glow" type="button" data-go="bonus">
-          <div class="mini__top"><span class="mini__pill">SOON</span></div>
-          <div class="mini__title">База знаний</div>
-          <div class="mini__sub muted">таблицы / шпаргалки</div>
-        </button>
-
-        <button class="mini glow" type="button" data-go="profile">
-          <div class="mini__top"><span class="mini__pill">NEW</span></div>
-          <div class="mini__title">Feedback</div>
-          <div class="mini__sub muted">пожелания / баги</div>
-        </button>
-
-        <button class="mini glow" type="button" data-go="bonus">
-          <div class="mini__top"><span class="mini__pill">PRO</span></div>
-          <div class="mini__title">Сопровождение</div>
-          <div class="mini__sub muted">чаты / помощь</div>
-        </button>
-
-        <button class="mini glow" type="button" data-go="bonus">
-          <div class="mini__top"><span class="mini__pill">HOT</span></div>
-          <div class="mini__title">Рефералы</div>
-          <div class="mini__sub muted">скидки за друзей</div>
-        </button>
-      </div>
-    </section>
-
-    <!-- Cards -->
-    <section class="section">
-      <div class="section__head">
-        <h2>MR Detailing Academy</h2>
-        <span class="muted">parallax</span>
-      </div>
-
-      <div class="cards">
-        <article class="p-card" data-parallax>
-          <div class="p-card__frame"></div>
-          <div class="p-card__bg p-card__bg--wash"></div>
-          <div class="p-card__shine"></div>
-          <div class="layer layer--glow"></div>
-          <div class="layer layer--object layer--wash"></div>
-          <div class="layer layer--particles"></div>
-
-          <div class="p-card__content">
-            <div class="tag tag--green">FREE</div>
-            <h3>Курс мойки</h3>
-            <p class="muted">Обязательная база. Откроет доступ к платным курсам.</p>
-            <div class="row">
-              <button class="btn" id="openWash">Открыть</button>
-              <button class="btn btn--ghost" id="previewWash">Превью</button>
-            </div>
-          </div>
-        </article>
-
-        <article class="p-card" data-parallax>
-          <div class="p-card__frame"></div>
-          <div class="p-card__bg p-card__bg--interior"></div>
-          <div class="p-card__shine"></div>
-          <div class="layer layer--glow"></div>
-          <div class="layer layer--object layer--interior"></div>
-          <div class="layer layer--particles"></div>
-
-          <div class="p-card__content">
-            <div class="tag tag--purple">LOCKED</div>
-            <h3>Химчистка салона</h3>
-            <p class="muted">Покупка/подписка. –50% за 3 друзей.</p>
-            <div class="row">
-              <button class="btn btn--primary" id="buyInterior">⭐ Купить</button>
-              <button class="btn btn--ghost" id="refInterior">🎁 Скидка</button>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <section class="hero" data-parallax>
-      <div class="hero__bg"></div>
-      <div class="hero__frame"></div>
-      <div class="layer layer--glow hero__glow"></div>
-      <div class="layer hero__hands"></div>
-      <div class="layer hero__ring"></div>
-      <div class="layer layer--particles hero__particles"></div>
-
-      <div class="hero__content">
-        <h1>База детейлера</h1>
-        <p class="muted">Химия, схемы, стандарты качества и частые ошибки.</p>
-        <button class="btn btn--primary" data-go="courses">Открыть курсы</button>
-      </div>
-    </section>
-
-    <div class="spacer"></div>
-  </section>
-
-  <!-- COURSES -->
-  <section class="screen" id="screen-courses">
-    <div class="section">
-      <div class="section__head">
-        <h2>Курсы</h2>
-        <span class="muted" id="coursesHint">выбери курс</span>
-      </div>
-
-      <div class="cards" id="coursesRoot"></div>
-    </div>
-  </section>
-
-  <!-- PROGRESS -->
-  <section class="screen" id="screen-progress">
-    <div class="section">
-      <div class="section__head">
-        <h2>Прогресс</h2>
-        <span class="muted">по твоим курсам</span>
-      </div>
-
-      <div class="glass" id="progressRoot"></div>
-    </div>
-  </section>
-
-  <!-- BONUS -->
-  <section class="screen" id="screen-bonus">
-    <div class="section">
-      <div class="section__head">
-        <h2>Бонусы</h2>
-        <span class="muted">рефералы / база</span>
-      </div>
-
-      <div class="glass" id="bonusRoot"></div>
-    </div>
-  </section>
-
-  <!-- PROFILE -->
-  <section class="screen" id="screen-profile">
-    <div class="section">
-      <div class="section__head">
-        <h2>Профиль</h2>
-        <span class="muted">настройки</span>
-      </div>
-
-      <div class="glass" id="profileRoot"></div>
-    </div>
-  </section>
-</main>
-
-
-
-          <!-- Interior (locked) -->
-          <article class="p-card" data-parallax>
-            <div class="p-card__frame"></div>
-            <div class="p-card__bg p-card__bg--interior"></div>
-            <div class="p-card__shine"></div>
-
-            <div class="layer layer--glow"></div>
-            <div class="layer layer--object layer--interior"></div>
-            <div class="layer layer--particles"></div>
-
-            <div class="p-card__content">
-              <div class="tag tag--purple">LOCKED</div>
-              <h3>Химчистка салона</h3>
-              <p class="muted">Покупка/подписка. –50% за 3 друзей по реферальной ссылке.</p>
-              <div class="row">
-                <button class="btn btn--primary" id="buyInterior">⭐ Купить</button>
-                <button class="btn btn--ghost" id="refInterior">🎁 Скидка</button>
-              </div>
-            </div>
-          </article>
-
-          <!-- Polish -->
-          <article class="p-card" data-parallax>
-            <div class="p-card__frame"></div>
-            <div class="p-card__bg p-card__bg--polish"></div>
-            <div class="p-card__shine"></div>
-
-            <div class="layer layer--glow"></div>
-            <div class="layer layer--object layer--polish"></div>
-            <div class="layer layer--particles"></div>
-
-            <div class="p-card__content">
-              <div class="tag tag--muted">SOON</div>
-              <h3>Полировка</h3>
-              <p class="muted">Шаги, пасты/круги, температура, контроль риски.</p>
-              <div class="row">
-                <button class="btn btn--ghost" id="notifyPolish">🔔 Уведомить</button>
-              </div>
-            </div>
-          </article>
-
-          <!-- Protect -->
-          <article class="p-card" data-parallax>
-            <div class="p-card__frame"></div>
-            <div class="p-card__bg p-card__bg--protect"></div>
-            <div class="p-card__shine"></div>
-
-            <div class="layer layer--glow"></div>
-            <div class="layer layer--object layer--protect"></div>
-            <div class="layer layer--particles"></div>
-
-            <div class="p-card__content">
-              <div class="tag tag--muted">SOON</div>
-              <h3>Защиты</h3>
-              <p class="muted">Воск, синтетика, керамика. Подготовка и уход.</p>
-              <div class="row">
-                <button class="btn btn--ghost" id="notifyProtect">🔔 Уведомить</button>
-              </div>
-            </div>
-          </article>
-        </div>
-      </section>
-
-      <!-- Big hero like screenshot -->
-      <section class="hero" data-parallax>
-        <div class="hero__bg"></div>
-        <div class="hero__frame"></div>
-
-        <div class="layer layer--glow hero__glow"></div>
-        <div class="layer hero__hands"></div>
-        <div class="layer hero__ring"></div>
-        <div class="layer layer--particles hero__particles"></div>
-
-        <div class="hero__content">
-          <h1>База детейлера</h1>
-          <p class="muted">
-            Всё по полочкам: химия, круги/пасты, схемы, ошибки и стандарты качества.
-          </p>
-          <button class="btn btn--primary">Посмотреть полностью</button>
-        </div>
-      </section>
-
-      <div class="spacer"></div>
-    </main>
-
-    <!-- Bottom Nav -->
-    <nav class="nav">
-      <button class="nav__item is-active" data-tab="home" type="button">
-        <span class="nav__icon">⌂</span>
-        <span class="nav__label">Главная</span>
-      </button>
-      <button class="nav__item" data-tab="courses" type="button">
-        <span class="nav__icon">▦</span>
-        <span class="nav__label">Курсы</span>
-      </button>
-      <button class="nav__item" data-tab="progress" type="button">
-        <span class="nav__icon">◔</span>
-        <span class="nav__label">Прогресс</span>
-      </button>
-      <button class="nav__item" data-tab="bonus" type="button">
-        <span class="nav__icon">✦</span>
-        <span class="nav__label">Бонусы</span>
-      </button>
-      <button class="nav__item" data-tab="profile" type="button">
-        <span class="nav__icon">⋯</span>
-        <span class="nav__label">Профиль</span>
-      </button>
-    </nav>
-  </div>
-
-  <!-- Telegram WebApp API -->
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="./app.js"></script>
-</body>
-</html>
-
+// ===== DATA (MVP) =====
+const academy = {
+  courses: [
+    {
+      id: "wash",
+      title: "Курс мойки",
+      desc: "Обязательная база. Откроет доступ к платным курсам.",
+      free: true,
+      modules: [
+        {
+          id: "wash_m1",
+          title: "Модуль 1 — Основы",
+          lessons: [
+            {
+              id: "wash_l1",
+              title: "Что такое детейлинг",
+              text: `Детейлинг — это системный уход: очистка + восстановление + защита.`,
+              test: {
+                q: "Детейлинг — это…",
+                options: [
+                  "Просто мойка",
+                  "Системный уход: очистка + восстановление + защита",
+                  "Только полировка",
+                ],
+                correct: 2,
+                explain: "Детейлинг включает очистку, восстановление и защиту.",
+              },
+            },
+            {
+              id: "wash_l2",
+              title: "Ошибки новичков",
+              text: `Топ ошибок: одна губка на всё, мойка по сухой пыли, сильная химия без контроля.`,
+              test: {
+                q: "Что чаще всего даёт микроцарапины?",
+                options: [
+                  "Одна губка/тряпка на всё",
+                  "Раздельные ведра и микрофибры",
+                  "Сушка воздухом",
+                ],
+                correct: 1,
+                explain: "Одна губка собирает абразив и царапает ЛКП.",
+              },
+            },
+          ],
+        },
+        {
+          id: "wash_m2",
+          title: "Модуль 2 — Процесс",
+          lessons: [
+            {
+              id: "wash_l3",
+              title: "Двухфазная мойка",
+              text: `Фаза 1 снимает основную грязь, фаза 2 безопасно домывает. Контакт — только после бесконтакта.`,
+              test: {
+                q: "Зачем нужна первая фаза?",
+                options: [
+                  "Чтобы снять грязь и снизить риск царапин",
+                  "Чтобы высушить кузов",
+                  "Чтобы быстрее перейти к контакту",
+                ],
+                correct: 1,
+                explain: "Фаза 1 снимает грязь, снижая абразив при контакте.",
+              },
+            },
+          ],
+        },
+      ],
+    },
+    {
+      id: "interior",
+      title: "Химчистка салона",
+      desc: "Покупка/подписка. –50% за 3 друзей.",
+      free: false,
+      modules: [
+        {
+          id: "int_m1",_
