--- a/index.html
+++ b/index.html
@@ -50,4 +50,195 @@
               <div class="mini__sub muted">модули / уроки</div>
             </button>
 
-            <button class="mini glow" type="button" data-go="pr
+            <button class="mini glow" type="button" data-go="progress">
+              <div class="mini__top"><span class="mini__pill">LIVE</span></div>
+              <div class="mini__title">Прогресс</div>
+              <div class="mini__sub muted">проценты / статус</div>
+            </button>
+
+            <button class="mini glow" type="button" data-go="bonus">
+              <div class="mini__top"><span class="mini__pill">HOT</span></div>
+              <div class="mini__title">Бонусы</div>
+              <div class="mini__sub muted">рефералы / скидки</div>
+            </button>
+
+            <button class="mini glow" type="button" data-go="profile">
+              <div class="mini__top"><span class="mini__pill">ME</span></div>
+              <div class="mini__title">Профиль</div>
+              <div class="mini__sub muted">настройки</div>
+            </button>
+          </div>
+        </section>
+
+        <section class="section">
+          <div class="section__head">
+            <h2>MR Detailing Academy</h2>
+            <span class="muted">parallax</span>
+          </div>
+
+          <div class="cards">
+            <!-- Wash -->
+            <article class="p-card" data-parallax>
+              <div class="p-card__frame"></div>
+              <div class="p-card__bg p-card__bg--wash"></div>
+              <div class="p-card__shine"></div>
+
+              <div class="layer layer--glow"></div>
+              <div class="layer layer--object layer--wash"></div>
+              <div class="layer layer--particles"></div>
+
+              <div class="p-card__content">
+                <div class="tag tag--green">FREE</div>
+                <h3>Курс мойки</h3>
+                <p class="muted">Обязательная база. Откроет доступ к платным курсам.</p>
+                <div class="row">
+                  <button class="btn btn--primary" id="openWash">Начать</button>
+                  <button class="btn btn--ghost" data-go="courses">Все курсы</button>
+                </div>
+              </div>
+            </article>
+
+            <!-- Interior -->
+            <article class="p-card" data-parallax>
+              <div class="p-card__frame"></div>
+              <div class="p-card__bg p-card__bg--interior"></div>
+              <div class="p-card__shine"></div>
+
+              <div class="layer layer--glow"></div>
+              <div class="layer layer--object layer--interior"></div>
+              <div class="layer layer--particles"></div>
+
+              <div class="p-card__content">
+                <div class="tag tag--purple">LOCKED</div>
+                <h3>Химчистка салона</h3>
+                <p class="muted">Доступ после “Мойки”. Оплата Stars — позже.</p>
+                <div class="row">
+                  <button class="btn btn--ghost" data-go="courses">Открыть список</button>
+                  <button class="btn btn--ghost" data-go="bonus">Скидка</button>
+                </div>
+              </div>
+            </article>
+          </div>
+        </section>
+
+        <section class="hero" data-parallax>
+          <div class="hero__bg"></div>
+          <div class="hero__frame"></div>
+          <div class="layer layer--glow hero__glow"></div>
+          <div class="layer hero__hands"></div>
+          <div class="layer hero__ring"></div>
+          <div class="layer layer--particles hero__particles"></div>
+
+          <div class="hero__content">
+            <h1>MR Academy</h1>
+            <p class="muted">Урок → тест → результат → прогресс. Всё в одном месте.</p>
+            <button class="btn btn--primary" data-go="courses">Открыть обучение</button>
+          </div>
+        </section>
+
+        <div class="spacer"></div>
+      </section>
+
+      <!-- COURSES -->
+      <section class="screen" id="screen-courses">
+        <section class="section">
+          <div class="section__head">
+            <h2>Курсы</h2>
+            <span class="muted">выбери курс</span>
+          </div>
+          <div class="cards" id="coursesRoot"></div>
+          <div class="spacer"></div>
+        </section>
+      </section>
+
+      <!-- PROGRESS -->
+      <section class="screen" id="screen-progress">
+        <section class="section">
+          <div class="section__head">
+            <h2>Прогресс</h2>
+            <span class="muted">по курсам</span>
+          </div>
+          <div class="glass" id="progressRoot"></div>
+          <div class="spacer"></div>
+        </section>
+      </section>
+
+      <!-- BONUS -->
+      <section class="screen" id="screen-bonus">
+        <section class="section">
+          <div class="section__head">
+            <h2>Бонусы</h2>
+            <span class="muted">рефералы</span>
+          </div>
+          <div class="glass" id="bonusRoot"></div>
+          <div class="spacer"></div>
+        </section>
+      </section>
+
+      <!-- PROFILE -->
+      <section class="screen" id="screen-profile">
+        <section class="section">
+          <div class="section__head">
+            <h2>Профиль</h2>
+            <span class="muted">настройки</span>
+          </div>
+          <div class="glass" id="profileRoot"></div>
+          <div class="spacer"></div>
+        </section>
+      </section>
+    </main>
+
+    <!-- Bottom Nav (SVG icons, clickable) -->
+    <nav class="nav" role="navigation" aria-label="Bottom Navigation">
+      <button class="nav__item is-active" data-tab="home" type="button" aria-label="Home">
+        <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
+          <path d="M4 10.5L12 4l8 6.5V20a1.5 1.5 0 0 1-1.5 1.5H5.5A1.5 1.5 0 0 1 4 20v-9.5Z"
+                stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+          <path d="M9.5 21.5v-6.2A1.3 1.3 0 0 1 10.8 14h2.4a1.3 1.3 0 0 1 1.3 1.3v6.2"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <span class="nav__label">Главная</span>
+      </button>
+
+      <button class="nav__item" data-tab="courses" type="button" aria-label="Courses">
+        <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
+          <path d="M4 6.5A2.5 2.5 0 0 1 6.5 4h11A2.5 2.5 0 0 1 20 6.5v11A2.5 2.5 0 0 1 17.5 20h-11A2.5 2.5 0 0 1 4 17.5v-11Z"
+                stroke="currentColor" stroke-width="2"/>
+          <path d="M8 8h8M8 12h8M8 16h5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <span class="nav__label">Курсы</span>
+      </button>
+
+      <button class="nav__item" data-tab="progress" type="button" aria-label="Progress">
+        <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
+          <path d="M12 3a9 9 0 1 0 9 9" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M21 12a9 9 0 0 0-9-9" stroke="currentColor" stroke-width="2" stroke-linecap="round" opacity=".55"/>
+          <path d="M12 7v6l4 2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <span class="nav__label">Прогресс</span>
+      </button>
+
+      <button class="nav__item" data-tab="bonus" type="button" aria-label="Bonuses">
+        <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
+          <path d="M12 3l1.6 5.2H19l-4.3 3.1L16.3 17 12 13.9 7.7 17l1.6-5.7L5 8.2h5.4L12 3Z"
+                stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+        </svg>
+        <span class="nav__label">Бонусы</span>
+      </button>
+
+      <button class="nav__item" data-tab="profile" type="button" aria-label="Profile">
+        <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
+          <path d="M12 12a4.2 4.2 0 1 0-4.2-4.2A4.2 4.2 0 0 0 12 12Z"
+                stroke="currentColor" stroke-width="2"/>
+          <path d="M4.5 20a7.5 7.5 0 0 1 15 0" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <span class="nav__label">Профиль</span>
+      </button>
+    </nav>
+  </div>
+
+  <!-- Telegram WebApp API + App JS -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="./app.js"></script>
+</body>
+</html>
