--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
   <meta name="theme-color" content="#0B0D12" />
   <title>MR Detailing Academy</title>
   <link rel="stylesheet" href="./styles.css" />
+
+  <!-- FIX: чтобы кнопки точно были кликабельны и иконки не были огромными
+       (даже если styles.css сейчас не той версии) -->
+  <style>
+    .nav{z-index:9999}
+    .nav__item{cursor:pointer; -webkit-tap-highlight-color:transparent}
+    .nav__svg{width:22px;height:22px; display:block}
+    .nav__label{font-size:11px}
+    /* иногда слой/фон перекрывает клики */
+    .bg,.bg *{pointer-events:none}
+  </style>
 </head>
 
 <body>
-  <!-- Background blobs -->
+  <!-- Background -->
   <div class="bg">
     <div class="bg__blob bg__blob--1"></div>
     <div class="bg__blob bg__blob--2"></div>
@@ -77,7 +88,6 @@
           </div>
 
           <div class="cards">
-            <!-- Wash -->
             <article class="p-card" data-parallax>
               <div class="p-card__frame"></div>
               <div class="p-card__bg p-card__bg--wash"></div>
@@ -98,7 +108,6 @@
               </div>
             </article>
 
-            <!-- Interior -->
             <article class="p-card" data-parallax>
               <div class="p-card__frame"></div>
               <div class="p-card__bg p-card__bg--interior"></div>
@@ -124,6 +133,7 @@
         <section class="hero" data-parallax>
           <div class="hero__bg"></div>
           <div class="hero__frame"></div>
+
           <div class="layer layer--glow hero__glow"></div>
           <div class="layer hero__hands"></div>
           <div class="layer hero__ring"></div>
@@ -131,7 +141,7 @@
 
           <div class="hero__content">
             <h1>MR Academy</h1>
-            <p class="muted">Урок → тест → результат → прогресс. Всё в одном месте.</p>
+            <p class="muted">Урок → тест → результат → прогресс.</p>
             <button class="btn btn--primary" data-go="courses">Открыть обучение</button>
           </div>
         </section>
@@ -188,7 +198,7 @@
       </section>
     </main>
 
-    <!-- Bottom Nav (SVG icons, clickable) -->
+    <!-- Bottom Nav -->
     <nav class="nav" role="navigation" aria-label="Bottom Navigation">
       <button class="nav__item is-active" data-tab="home" type="button" aria-label="Home">
         <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
@@ -240,5 +250,33 @@
   <!-- Telegram WebApp API + App JS -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="./app.js"></script>
+
+  <!-- Fallback nav: если app.js упал/не загрузился — кнопки всё равно будут работать -->
+  <script>
+    (function () {
+      const screens = Array.from(document.querySelectorAll(".screen"));
+      const navBtns = Array.from(document.querySelectorAll(".nav__item"));
+      const goBtns = Array.from(document.querySelectorAll("[data-go]"));
+
+      function show(tab) {
+        screens.forEach(s => s.classList.remove("is-active"));
+        const target = document.getElementById("screen-" + tab);
+        if (target) target.classList.add("is-active");
+
+        navBtns.forEach(b => b.classList.remove("is-active"));
+        const active = document.querySelector('.nav__item[data-tab="' + tab + '"]');
+        if (active) active.classList.add("is-active");
+      }
+
+      // Только если app.js не повесил навигацию сам
+      // (если app.js всё же работает — он просто “перебьёт” классы, это ок)
+      navBtns.forEach(btn => {
+        btn.addEventListener("click", () => show(btn.dataset.tab));
+      });
+      goBtns.forEach(btn => {
+        btn.addEventListener("click", () => show(btn.dataset.go));
+      });
+    })();
+  </script>
 </body>
 </html>
