--- a/index.html
+++ b/index.html
@@ -7,15 +7,27 @@
   <title>MR Detailing Academy</title>
   <link rel="stylesheet" href="./styles.css" />
 
-  <!-- FIX: чтобы кнопки точно были кликабельны и иконки не были огромными
-       (даже если styles.css сейчас не той версии) -->
+  <!-- Мини-фиксы, чтобы ничего не перекрывало клики + премиум вид иконок -->
   <style>
-    .nav{z-index:9999}
-    .nav__item{cursor:pointer; -webkit-tap-highlight-color:transparent}
-    .nav__svg{width:22px;height:22px; display:block}
-    .nav__label{font-size:11px}
-    /* иногда слой/фон перекрывает клики */
-    .bg,.bg *{pointer-events:none}
+    .bg, .bg * { pointer-events:none; }
+
+    .nav { z-index: 9999; }
+    .nav__item{ cursor:pointer; -webkit-tap-highlight-color:transparent; }
+    .nav__svg{
+      width:22px;height:22px;display:block;
+      color:rgba(255,255,255,.72);
+      transition: color .2s ease, transform .15s ease;
+    }
+    .nav__label{font-size:11px;margin-top:4px;opacity:.65}
+    .nav__item.is-active .nav__svg{color:#fff; transform: translateY(-1px);}
+    .nav__item.is-active .nav__label{opacity:1;}
+
+    /* Brand */
+    .brand{display:flex;align-items:center;gap:12px;}
+    .brand__logo{width:44px;height:44px;display:grid;place-items:center;}
+    .brand__text .title{line-height:1.05}
+    .brand__sub{margin-top:2px;font-size:11px;opacity:.7}
+    .logo{width:44px;height:44px;filter:drop-shadow(0 12px 18px rgba(143,107,255,.20));}
   </style>
 </head>
 
@@ -33,9 +45,48 @@
     <header class="topbar">
       <button class="icon-btn" id="closeBtn" aria-label="Close">×</button>
 
+      <!-- BRAND + NAME -->
       <div class="topbar__center">
-        <div class="muted" id="greeting">Доброе утро,</div>
-        <div class="title" id="username">MarkeyG</div>
+        <div class="brand">
+          <div class="brand__logo" aria-label="MR Detailing Academy">
+            <!-- Premium Logo: MR monogram + droplet (SVG, no assets needed) -->
+            <svg class="logo" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
+              <defs>
+                <linearGradient id="mr_g" x1="14" y1="10" x2="54" y2="56" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#9B7CFF"/>
+                  <stop offset="1" stop-color="#6C4DFF"/>
+                </linearGradient>
+                <filter id="mr_glow" x="-50%" y="-50%" width="200%" height="200%">
+                  <feGaussianBlur stdDeviation="3.2" result="b"/>
+                  <feMerge>
+                    <feMergeNode in="b"/>
+                    <feMergeNode in="SourceGraphic"/>
+                  </feMerge>
+                </filter>
+              </defs>
+
+              <!-- Glass tile -->
+              <rect x="6" y="6" width="52" height="52" rx="18" fill="rgba(255,255,255,.06)" stroke="rgba(255,255,255,.14)"/>
+
+              <!-- Droplet -->
+              <path filter="url(#mr_glow)"
+                    d="M44 19c0 9-8 14-8 20a8 8 0 0 0 16 0c0-6-8-11-8-20z"
+                    fill="url(#mr_g)" opacity=".95"/>
+
+              <!-- MR monogram (clean + premium) -->
+              <path d="M14.5 42V25.5c0-2 1.2-3 3-3h1.7c1.1 0 2.1.5 2.7 1.5l3.1 5 3.1-5c.6-1 1.6-1.5 2.7-1.5H36c1.8 0 3 1 3 3V42"
+                    stroke="rgba(255,255,255,.92)" stroke-width="3.2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M39 32.8h5.7c2.6 0 4.6-1.7 4.6-4.2S47.3 24.4 44.7 24.4H39V42"
+                    stroke="rgba(255,255,255,.92)" stroke-width="3.2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+
+          <div class="brand__text">
+            <div class="muted" id="greeting">Доброе утро,</div>
+            <div class="title" id="username">MarkeyG</div>
+            <div class="brand__sub">MR Detailing Academy</div>
+          </div>
+        </div>
       </div>
 
       <div class="topbar__right">
@@ -83,7 +134,7 @@
 
         <section class="section">
           <div class="section__head">
-            <h2>MR Detailing Academy</h2>
+            <h2>MR Academy</h2>
             <span class="muted">parallax</span>
           </div>
 
@@ -100,7 +151,7 @@
               <div class="p-card__content">
                 <div class="tag tag--green">FREE</div>
                 <h3>Курс мойки</h3>
-                <p class="muted">Обязательная база. Откроет доступ к платным курсам.</p>
+                <p class="muted">База, которая открывает доступ к платным курсам.</p>
                 <div class="row">
                   <button class="btn btn--primary" id="openWash">Начать</button>
                   <button class="btn btn--ghost" data-go="courses">Все курсы</button>
@@ -120,9 +171,9 @@
               <div class="p-card__content">
                 <div class="tag tag--purple">LOCKED</div>
                 <h3>Химчистка салона</h3>
-                <p class="muted">Доступ после “Мойки”. Оплата Stars — позже.</p>
+                <p class="muted">Доступ после “Мойки”. Оплата Stars — дальше.</p>
                 <div class="row">
-                  <button class="btn btn--ghost" data-go="courses">Открыть список</button>
+                  <button class="btn btn--ghost" data-go="courses">Список</button>
                   <button class="btn btn--ghost" data-go="bonus">Скидка</button>
                 </div>
               </div>
@@ -140,8 +191,8 @@
           <div class="layer layer--particles hero__particles"></div>
 
           <div class="hero__content">
-            <h1>MR Academy</h1>
-            <p class="muted">Урок → тест → результат → прогресс.</p>
+            <h1>MR Detailing Academy</h1>
+            <p class="muted">Урок → тест → результат → прогресс. Всё в одном приложении.</p>
             <button class="btn btn--primary" data-go="courses">Открыть обучение</button>
           </div>
         </section>
@@ -198,60 +249,73 @@
       </section>
     </main>
 
-    <!-- Bottom Nav -->
+    <!-- Bottom Nav (premium icons) -->
     <nav class="nav" role="navigation" aria-label="Bottom Navigation">
+      <!-- HOME -->
       <button class="nav__item is-active" data-tab="home" type="button" aria-label="Home">
         <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
-          <path d="M4 10.5L12 4l8 6.5V20a1.5 1.5 0 0 1-1.5 1.5H5.5A1.5 1.5 0 0 1 4 20v-9.5Z"
-                stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
-          <path d="M9.5 21.5v-6.2A1.3 1.3 0 0 1 10.8 14h2.4a1.3 1.3 0 0 1 1.3 1.3v6.2"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M3 11.5L12 4l9 7.5"
+                stroke="currentColor" stroke-width="1.6"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M6.5 10.5V20h11V10.5"
+                stroke="currentColor" stroke-width="1.6"
+                stroke-linecap="round"/>
         </svg>
         <span class="nav__label">Главная</span>
       </button>
 
+      <!-- COURSES -->
       <button class="nav__item" data-tab="courses" type="button" aria-label="Courses">
         <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
-          <path d="M4 6.5A2.5 2.5 0 0 1 6.5 4h11A2.5 2.5 0 0 1 20 6.5v11A2.5 2.5 0 0 1 17.5 20h-11A2.5 2.5 0 0 1 4 17.5v-11Z"
-                stroke="currentColor" stroke-width="2"/>
-          <path d="M8 8h8M8 12h8M8 16h5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <rect x="4" y="4" width="16" height="16" rx="3"
+                stroke="currentColor" stroke-width="1.6"/>
+          <path d="M8 9h8M8 13h8M8 17h5"
+                stroke="currentColor" stroke-width="1.6"
+                stroke-linecap="round"/>
         </svg>
         <span class="nav__label">Курсы</span>
       </button>
 
+      <!-- PROGRESS -->
       <button class="nav__item" data-tab="progress" type="button" aria-label="Progress">
         <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
-          <path d="M12 3a9 9 0 1 0 9 9" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          <path d="M21 12a9 9 0 0 0-9-9" stroke="currentColor" stroke-width="2" stroke-linecap="round" opacity=".55"/>
-          <path d="M12 7v6l4 2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <circle cx="12" cy="12" r="8"
+                  stroke="currentColor" stroke-width="1.6"/>
+          <path d="M12 7v5l3 2"
+                stroke="currentColor" stroke-width="1.6"
+                stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
         <span class="nav__label">Прогресс</span>
       </button>
 
+      <!-- BONUS -->
       <button class="nav__item" data-tab="bonus" type="button" aria-label="Bonuses">
         <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
-          <path d="M12 3l1.6 5.2H19l-4.3 3.1L16.3 17 12 13.9 7.7 17l1.6-5.7L5 8.2h5.4L12 3Z"
-                stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+          <path d="M12 4l2.4 4.8 5.3.4-4 3.6 1.2 5.2L12 15.6 7.1 18l1.2-5.2-4-3.6 5.3-.4L12 4z"
+                stroke="currentColor" stroke-width="1.5"
+                stroke-linejoin="round"/>
         </svg>
         <span class="nav__label">Бонусы</span>
       </button>
 
+      <!-- PROFILE -->
       <button class="nav__item" data-tab="profile" type="button" aria-label="Profile">
         <svg class="nav__svg" viewBox="0 0 24 24" fill="none">
-          <path d="M12 12a4.2 4.2 0 1 0-4.2-4.2A4.2 4.2 0 0 0 12 12Z"
-                stroke="currentColor" stroke-width="2"/>
-          <path d="M4.5 20a7.5 7.5 0 0 1 15 0" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <circle cx="12" cy="8" r="3.5"
+                  stroke="currentColor" stroke-width="1.6"/>
+          <path d="M5 20c0-3.6 3.1-6 7-6s7 2.4 7 6"
+                stroke="currentColor" stroke-width="1.6"
+                stroke-linecap="round"/>
         </svg>
         <span class="nav__label">Профиль</span>
       </button>
     </nav>
   </div>
 
-  <!-- Telegram WebApp API + App JS -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="./app.js"></script>
 
-  <!-- Fallback nav: если app.js упал/не загрузился — кнопки всё равно будут работать -->
+  <!-- Fallback nav (чтобы кнопки работали даже если app.js упал) -->
   <script>
     (function () {
       const screens = Array.from(document.querySelectorAll(".screen"));
@@ -268,14 +332,8 @@
         if (active) active.classList.add("is-active");
       }
 
-      // Только если app.js не повесил навигацию сам
-      // (если app.js всё же работает — он просто “перебьёт” классы, это ок)
-      navBtns.forEach(btn => {
-        btn.addEventListener("click", () => show(btn.dataset.tab));
-      });
-      goBtns.forEach(btn => {
-        btn.addEventListener("click", () => show(btn.dataset.go));
-      });
+      navBtns.forEach(btn => btn.addEventListener("click", () => show(btn.dataset.tab)));
+      goBtns.forEach(btn => btn.addEventListener("click", () => show(btn.dataset.go)));
     })();
   </script>
 </body>
